--- a/style.css
+++ b/style.css
@@ -133,6 +133,25 @@ body.activeNav .nav {
     transition: all 300ms ease-in-out;
 }
 
+.nav .links .link a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    border-radius: 4px;
+    background-color: #aaa;
+    bottom: 35%;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+}
+
+.nav .links .link a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
 body.activeNav .nav .links .link {
     left: 0;
 }
