--- a/style.css
+++ b/style.css
@@ -734,12 +734,14 @@ main {
     height: 2px;
     background: black;
     position: absolute;
-    top: 58.5em;    left: 30px;
+    top: 58.5em;
+    left: 30px;
 }
 
 .middel-container h2 {
     position: absolute;
-    top: 37.2em;    left: 30px;
+    top: 37.2em;
+    left: 30px;
 }
 
 .middel-container h1 {
@@ -780,9 +782,85 @@ main {
     right: 115px;
 }
 
-.flower-icon{
+.flower-icon {
     font-size: 40px;
-  position: absolute;
-  top: 24.2em;
-  right: 36px;
+    position: absolute;
+    top: 24.2em;
+    right: 36px;
+}
+
+.option-container {
+    position: relative;
+    top: 41em;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 25px;
+    padding: 0 0 35px;
+}
+
+.option1,
+.option2,
+.option3,
+.option4,
+.option5,
+.option6,
+.option7 {
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 5px 13px;
+}
+
+.option1 {
+    position: relative;
+    left: 10px;
+    background: black;
+    color: white;
+    transform: rotate(5deg);
+}
+
+.option2 {
+    position: relative;
+    right: 15px;
+    transform: rotate(-6deg);
+    bottom: 5px;
+    background-color: white;
+}
+
+.option3 {
+    position: relative;
+    right: 40px;
+    transform: rotate(10deg);
+    background: white;
+    bottom: 4px;
+}
+
+.option4 {
+    position: relative;
+    right: 68px;
+    transform: rotate(-6deg);
+    bottom: 2px;
+    background-color: white;
+}
+
+.option5 {
+    position: relative;
+    right: 94px;
+    transform: rotate(10deg);
+    background: white;
+}
+
+.option6 {
+    position: relative;
+    right: 120px;
+    transform: rotate(-6deg);
+    top: 8px;
+    background-color: white;
+}
+
+.option7 {
+    position: relative;
+    right: 145px;
+    transform: rotate(10deg);
+    background: white;
+    top: 12px;
 }
